# Bookstore_2023_Li_Mike

./: CMakeLists.txt  blocklist.h  main.cpp  manual.md
bookstore-testcases/: code
bookstore-testcases/basic/testcase8/: 71.ans:Zone.Identifier
docs/: design.md  requirements.md
src/: accounts.h  blocklist.h  books.h  error.h  finance.h  log.h  loginstate.h  parser.h  statements.h
